# agent-tools

./: .gitignore  AGENTS.md  LICENSE  README.md  prompts.yaml  pyproject.toml
drafts/: sc.document.md  sc.finalize.md  sc.implement.tasks.md  sc.save.spec.md  sc.split.tasks.md
kit/commands/: critique.md  drift.detect.yaml
src/agent_tools/: __init__.py  checkpoint.py  cli.py  config.py  jules_client.py  prompts.yaml
src/agent_tools/clients/: github_client.py  jules_client.py
src/agent_tools/commands/: jules.py  kit.py  memory.py  refine_loop.py
src/agent_tools/commands/templates/commands/: critique.yaml
src/agent_tools/templates/: agents-file-creator.md  agents-file-creator.yaml  critique.yaml  drift.detect.md  drift.detect.yaml  sc.superb.critique.md  sc.superb.critique.yaml  sc.superb.drift.detect.md  sc.superb.drift.detect.yaml
